[gd_scene load_steps=11 format=2]

[ext_resource path="res://res/fonts/a-alloy-ink-font/AlloyInk-lgdWw.otf" type="DynamicFontData" id=1]
[ext_resource path="res://src/code/HUD.gd" type="Script" id=2]
[ext_resource path="res://res/sound/GAMEOVER.wav" type="AudioStream" id=3]
[ext_resource path="res://res/sound/GUI_accept.wav" type="AudioStream" id=4]
[ext_resource path="res://res/fonts/a-alloy-ink-font/AlloyInk-nRLyO.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://src/code/HUD/OutGame.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="OutGame" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Accept" type="AudioStreamPlayer" parent="OutGame"]
stream = ExtResource( 4 )

[node name="GameOver" type="AudioStreamPlayer" parent="OutGame"]
stream = ExtResource( 3 )

[node name="Title" type="Label" parent="OutGame"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_right = 200.0
margin_bottom = -49.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0.843137, 1 )
text = "Bellaland"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="OutGame"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -85.0
margin_top = -118.0
margin_right = 85.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="OutGame/Menu"]
margin_right = 170.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Comenzar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="ToolButton" parent="OutGame/Menu"]
margin_top = 40.0
margin_right = 170.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 3 )
text = "Settings"

[node name="Exit" type="Button" parent="OutGame/Menu"]
margin_top = 77.0
margin_right = 170.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 4 )
text = "Exit"
flat = true
[connection signal="exit" from="OutGame" to="." method="_on_ExitGame"]
[connection signal="start" from="OutGame" to="." method="_on_StartGame"]
[connection signal="pressed" from="OutGame/Menu/Start" to="OutGame" method="_on_StartBtn_pressed"]
[connection signal="pressed" from="OutGame/Menu/Settings" to="OutGame" method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="OutGame/Menu/Exit" to="OutGame" method="_on_ExitBtn_pressed"]
